--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "axios": "^0.19.0",
     "boardgame.io": "^0.32.1",
     "esm": "^3.2.25",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.1"
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "^3.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.0",
@@ -32,6 +34,6 @@
     "style-loader": "^0.23.0",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.1.8"
+    "webpack-dev-server": "^3.7.2"
   }
 }
